fix layout on mobile screen

--- a/css/homePage.css
+++ b/css/homePage.css
@@ -1830,8 +1830,7 @@ h1{
     #mobileMenu{
         display: flex;
         flex-direction: column;
-        /*background-color: rgb(245, 245, 245);*/
-        backdrop-filter: blur(20px);
+        background-color: white;
         width: 200px;
         padding-top: 20px;
         gap: 10px;
