--- a/css/menuPage.css
+++ b/css/menuPage.css
@@ -128,8 +128,7 @@ body{
     #mobileMenu{
         display: none;
         flex-direction: column;
-        /*background-color: rgb(245, 245, 245);*/
-        backdrop-filter: blur(20px);
+        background-color: white;
         width: 200px;
         padding-top: 20px;
         gap: 10px;
@@ -515,11 +514,13 @@ box-shadow: inset 0 0 0 2px #FF8900;
     grid-template-columns: repeat(2,1fr);
 }
     img{
-    width: 150px;
+    width: 50px;
+ 
 
 }
 .items{
     gap: 5px;
+    box-shadow: none;
     height: 280px;
     padding-right: 10px;
 }
@@ -550,13 +551,22 @@ box-shadow: inset 0 0 0 2px #FF8900;
     gap: 10px;
     grid-template-columns: repeat(2,1fr);
 }
-        img{
-    width: 130px;
-
+#item{
+    position: relative;
+    height: 80%;
+    background-color: rgba(129, 129, 129, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    margin-bottom: 0px;
+    border-radius: 7px;
 }
+  #menuPic{
+    width: 130px;
+  }
 .items{
     gap: 5px;
-    height: 250px;
+    height: 220px;
     padding-right: 10px;
 }
 #itemName{
